false positive article, js in article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,3 +68,7 @@ layout: base
     </div>
   </div>
 </div>
+
+{% for js in page.customjs %}
+<script async type="text/javascript" src="{{ js }}"></script>
+{% endfor %}
