--- a/assets/posts/false-positive-rate.css
+++ b/assets/posts/false-positive-rate.css
@@ -2,11 +2,31 @@
   width: 720px;
   height: 400px;
   border: 1px solid #f9f1f1;
-  background: ##fffaf1;
+  background: #fffaf1;
 }
 
 .person {
-  width:
+  display: inline-block;
+  width: 20px;
+  height: 30px;
+  margin: 2px;
+}
+
+.person > .head {
+  width: 15px;
+  height: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  background: grey;
+  border-radius: 15px
+}
+
+.person > .body {
+  width: 20px;
+  height: 15px;
+  background: grey;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .dialogue {
