--- a/assets/posts/false-positive-rate.css
+++ b/assets/posts/false-positive-rate.css
@@ -46,6 +46,16 @@
   text-align: center;
 }
 
+.readout {
+  position: relative;
+}
+
+.readout > .label {
+  position: absolute;
+  top: -1em;
+  left: 1.25em;
+}
+
 .right > .vertical-bar {
   float: right;
 }
