--- a/assets/posts/false-positive-rate.css
+++ b/assets/posts/false-positive-rate.css
@@ -3,7 +3,7 @@
 }
 
 .full-info-box {
-  width: 720px;
+  width: 100%;
   height: 400px;
   border: 1px solid #f9f1f1;
   background: #fffaf1;
@@ -11,6 +11,10 @@
   color: #826767;
   font-size: 0.75em;
   font-weight: bold;
+}
+
+.full-info-box > .demo-controls {
+  font-weight: normal;
 }
 
 .top-bar {
