--- a/assets/posts/false-positive-rate.css
+++ b/assets/posts/false-positive-rate.css
@@ -4,7 +4,6 @@
 
 .full-info-box {
   width: 100%;
-  height: 400px;
   border: 1px solid #f9f1f1;
   background: #fffaf1;
 
@@ -15,6 +14,12 @@
 
 .full-info-box > .demo-controls {
   font-weight: normal;
+  margin-bottom: 20px;
+}
+
+.full-info-box > .final-stats {
+  font-weight: normal;
+  margin-top: 20px;
 }
 
 .top-bar {
@@ -38,6 +43,11 @@
 
 .outcomes-block {
   width: 100%;
+}
+
+.outcomes-block td {
+  width: 25%;
+  vertical-align: top;
 }
 
 .right > .readout {
