--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,6 +1,13 @@
 <figure class="image">
   <center>
     <img src="{{ include.url }}" alt="{{ include.description }}" />
-    <figcaption><i>{{ include.description }}</i></figcaption>
+    <figcaption>
+      <i>
+        {{ include.description }}
+        {% if include.source %}
+          - <a href="{{ include.source_url }}">{{ include.source }}</a>
+        {% endif %}
+      </i>
+    </figcaption>
   </center>
 </figure>
