--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,3 +76,12 @@ layout: base
 {% for js in page.jsmodules %}
 <script type="module" src="{{ js }}"></script>
 {% endfor %}
+
+<script src="https://utteranc.es/client.js"
+  repo="tantaman/tantaman.github.io"
+  issue-term="pathname"
+  label="blog-comment"
+  theme="github-light"
+  crossorigin="anonymous"
+  async>
+</script>
