--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@ hr.small {
 }
 
 /* fix in-page anchors to not be behind fixed header */
-:target:before { 
+:target:before {
   content: "";
   display: block;
   height: 3.125rem; /* navbar height */
@@ -493,7 +493,7 @@ footer .footer-custom-content {
   filter: grayscale(0%);
 }
 .post-image img {
-  border-radius: 6.25rem;
+  /* border-radius: 6.25rem; */
   height: 12rem;
   width: 12rem;
 }
@@ -717,7 +717,7 @@ footer .footer-custom-content {
     display: block;
   }
 }
-.reader-time .middot { 
+.reader-time .middot {
   margin: 0 0.625rem;
 }
 
