add mermaid graph

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -118,6 +118,11 @@
   {% include matomo.html %}
   {% endif %}
 
+  {% if page.mermaid %}
+  {% include mermaid.html %}
+  {% endif %}
+
+
   {% if page.comments and site.staticman.repository and site.staticman.branch %}
   <!-- Staticman -->
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
