--- a/docs/index.css
+++ b/docs/index.css
@@ -62,6 +62,26 @@ pre {
   display: grid;
 }
 
+.post-grid {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+@media screen and (max-width: 1030px) {
+  .post-grid {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .post-grid {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
