--- a/docs/the-mirror-room/styles.css
+++ b/docs/the-mirror-room/styles.css
@@ -5,10 +5,15 @@
   box-sizing: border-box;
 }
 
+.toc {
+  display: none;
+}
+
 body {
-  background-color: #f9f6f1;
+  /* background-color: #f9f6f1; */
+  background-color: #fffff8;
   color: #2c2c2c;
-  font-family: 'Crimson Pro', serif;
+  font-family: 'Cormorant Garamond', serif;
   font-size: 18px;
   line-height: 1.7;
   padding: 2rem;
@@ -19,22 +24,23 @@ body {
   max-width: 720px;
   margin: 0 auto;
   padding: 2rem;
-  background-color: #f9f6f1;
 }
 
 /* Header styling */
-header h1 {
-  font-family: 'IM Fell English', serif;
+h1 {
   font-size: 2.8rem;
+  text-transform: uppercase;
   text-align: center;
   letter-spacing: 1px;
+  font-weight: 500;
   margin-bottom: 0.5rem;
 }
 
-header h2 {
-  font-family: 'Crimson Pro', serif;
+/* Subtext styling */
+h3 {
   font-size: 1.1rem;
   text-align: center;
+  text-transform: uppercase;
   margin-bottom: 2rem;
   letter-spacing: 0.05rem;
   font-weight: normal;
@@ -42,15 +48,14 @@ header h2 {
 }
 
 /* Chapter styling */
-.chapter h3 {
-  font-family: 'IM Fell English', serif;
+h2 {
   font-size: 1.6rem;
   text-transform: uppercase;
   margin-bottom: 1rem;
   text-align: center;
 }
 
-.chapter p {
+p {
   margin-bottom: 1.2rem;
   text-align: justify;
 }
