--- a/docs/the-mirror-room/styles.css
+++ b/docs/the-mirror-room/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;700&#x26;display=swap');
+
 /* Reset & Base Styles */
 * {
   margin: 0;
